
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {scalar_t__ Name; } ;


 TYPE_1__* Targets ;
 int exit (int) ;
 int fprintf (int ,char*,...) ;
 int stderr ;

void Usage(char *Prog)
{
  int i;
  fprintf(stderr, "Usage: %s -h hostname <options>\n\n"
      "Options:\n\n"
      " -t target : Select the target\n"
      " -p portnumber : Sets a new port number\n"
      " -b : Bruteforce mode\n"
      " -a address : Defines the start address to bruteforce (Format: 0xdeadbeef)\n"
      " -r port : Defines the port to bind (Default = 31337)\n\n"
      "Targets:\n\n",Prog);

  for(i=0;;i++)
  {
    if(Targets[i].Name != 0)
      fprintf(stderr," [%u] %s\n",i,Targets[i].Name);
    else
      break;
  }
  fprintf(stderr,"\n");
  exit(1);
}
